--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
 
     
 
@@ -379,7 +379,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p>Changes to Michigan's No-Fault auto insurance laws begin on July 1st!</p><p><span style="font-size: 1.1rem;">Visit the following websites to see what to expect.</span><br></p></div>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p>Michigan's new auto insurance laws began on July 1st, 2020.</p><p><span style="font-size: 1.1rem;">Visit the following websites to see what has changed.</span><br></p></div>
         </div>
     </div>
 </section>
@@ -449,7 +449,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1zehLnk4PEEByM38FVlQzWlUmDY1iWXT1uRNe/+KqOTh20vQfWFUIYItYjelOrV3ggeAji0YbQvgqQ1hJhEYS5npqmnSTxfNw8V/ZxG5EwR+yswuoS3QkZ+Gvpaypvwi">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="z+vRHtPpgIcRb/qAQODgRQTIPNVLQeKksh8KdFNyOWY9LhrQxmUd8wdCVgJQ77IT9kDxNGjUETe7RtwUe8csEondEvmiaAIxvMVKJt9NpnpaTmahNbUJT7fYRZOm+sdy">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-6y">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
