--- a/newsletter.html
+++ b/newsletter.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="services1 cid-s6QapYM2ZU" id="services1-an">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="services1 cid-s6QapYM2ZU" id="services1-an">
     <!---->
     
     <!---->
