--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ghvhgtqyyYEY35FXss9QogE7BOFOq/HJJRKpVD5saZOjhdB2iQ6CjmdU9xJKsLDqNzkChM/C8PVVtxOP3Mk6cg0XdiUpEd1Boop4AbpmhudfnOghAWlFc3BIeiWUREZ+">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3agKPTwhyWmqEhmUrUitux5ftNUcdspp7xPHnebnY1KrnDExGqjmVHjFNXB6YC2Mc6IhrABT533EbbZeCCOtve+PHYc1wsldYTG+JBhx5Q++QQqa0PjeYEyAmzv3crCT">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
